--- a/public/404.html
+++ b/public/404.html
@@ -91,7 +91,8 @@
 <body>
   <div id="message">
     <h2>404</h2>
-    <h1>Restart the app! This is a bug!</h1>
+    <h1>Du ser denne siden fordi Trygve suger i koding.</h1>
+    <h1>Alt du gjorde burde ha blitt lagret, hvis ikke er det skill issue.</h1>
   </div>
 </body>
 
